Refactor navigation and login components to enhance user authentication experience and simplify code structure

--- a/appsettings.Live.json
+++ b/appsettings.Live.json
@@ -40,7 +40,10 @@
       "ResourceId": "/subscriptions/512d3155-94e5-47f4-8fd6-717239bc6aec/resourceGroups/contoso-resource-group/providers/Microsoft.Communication/communicationServices/acsresourcecontoso"
     },
     "KeyVault": {
-      "VaultUri": "https://contosokeyvault.vault.azure.net/"
+      "VaultUri": "https://contosokeyvault.vault.azure.net/",
+  "Enabled": true,
+  "PreferAzureCliCredential": true,
+  "EnableInteractiveBrowserCredential": false
     }
   }
 }
