--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,33 @@
 				"$msCompile"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Build CrossTenantChat",
+			"type": "shell",
+			"command": "dotnet build",
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build CrossTenantChat",
+			"type": "shell",
+			"command": "dotnet build",
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build CrossTenantChat",
+			"type": "shell",
+			"command": "dotnet build",
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build"
 		}
 	]
 }
