feat: Implement CallingController for Azure Communication Services token generation
feat: Add AcsOperationTracker service for tracking ACS operations

feat: Create IAcsOperationTracker interface and related models for operation tracking

feat: Enhance ACS UI library integration with improved loading and error handling

feat: Develop acs-calling.js for direct Azure Communication Services calling functionality

test: Add test script for verifying ACS UI library loading functionality

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,28 +2,10 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Run CrossTenantChat (Live no-profile)",
+			"label": "Run CrossTenantChat",
 			"type": "shell",
-			"command": "$env:ASPNETCORE_ENVIRONMENT=\"Live\"; dotnet run --project CrossTenantChat.csproj --no-launch-profile",
+			"command": "dotnet run --project CrossTenantChat.csproj",
 			"isBackground": false,
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"group": "build"
-		},
-		{
-			"label": "Build CrossTenantChat",
-			"type": "shell",
-			"command": "dotnet build",
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"group": "build"
-		},
-		{
-			"label": "Build CrossTenantChat",
-			"type": "shell",
-			"command": "dotnet build",
 			"problemMatcher": [
 				"$msCompile"
 			],
