--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "launchBrowser": true,
         "applicationUrl": "http://localhost:5068",
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Production"
         }
       },
       "https": {
@@ -16,7 +16,7 @@
         "launchBrowser": true,
         "applicationUrl": "https://localhost:7240;http://localhost:5068",
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Production"
         }
       }
     }
